--- a/css/form.css
+++ b/css/form.css
@@ -1,5 +1,9 @@
 /* Style pour l'entête de la page   */
-body
+/* body
+{
+    background-image: url('../media/fond.jpeg');
+    background-size: cover;
+} */
 .contenair {
     background-color: black;
 }
@@ -28,6 +32,7 @@ header {
     display: inline-block;
     vertical-align: middle;
 }
+
 .nav_barre ul {
     list-style: none;
 }
@@ -52,15 +57,53 @@ footer {
 
 }
 
+/* STYLE POUR LES RESEAU SOCIAUX  */
+.contactez-nous #apple,
+#twitter,
+#facebook,
+#github {
+    font-size: 3em;
+    background-color: #00000080;
+    color: #fff;
+    box-shadow: 2px 2px 2px #00000080, 10px 1px 12px #00000080, 2px 2px 10px #00000080, 2px 2px 3px #00000080, inset 2px 2px 10px #00000080 inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080;
+    border-radius: 11px 19px;
+    margin: 0 40px;
+    animation: animate 3s linear infinite;
+    text-shadow: 0 0 50px #0072ff, 0 0 100px #0072ff, 0 0 150px #0072ff, 0 0 200px #0072ff;
+}
+
+/* APPORTER DE L'ANIMATION  */
+#twitter {
+    animation-delay: 0.3s;
+}
+
+#facebook {
+    animation-delay: 0.7s;
+}
+
+#github {
+    animation-delay: 0.1s;
+}
+
+@keyframes animate {
+    from {
+        filter: hue-rotate(360deg);
+    }
+}
+
+/* FIN STYLE OUR LES RESAUX SOCIAUX  */
+/* FIN PIED DE PAGE  */
+
+/* FORMULAIRE STYLE  */
 .logo-odk img {
     width: 125px;
 }
-.names
-{
+
+.names {
     background: rgb(216, 210, 210);
 }
-.form-title
-{
+
+.form-title {
     max-width: 500px;
     position: relative;
     display: flex;
@@ -70,8 +113,8 @@ footer {
     margin-left: 30%;
 
 }
-.form-title p
- {
+
+.form-title p {
     background-color: black;
     color: orangered;
     border-radius: 15px 15px 0 0;
@@ -79,17 +122,17 @@ footer {
     text-align: center;
     font-size: xx-large;
     margin-bottom: 0px;
-} 
-.form-title p::before
-{
+}
+
+.form-title p::before {
     content: "";
     position: absolute;
     height: 3px;
     width: 50px;
     background: orangered;
 }
-form .names
- {
+
+form .names {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -97,8 +140,7 @@ form .names
 
 
 
-.form-title form .names .user-box input
-{
+.form-title form .names .user-box input {
     width: 100%;
     height: 15px;
     padding: 8px 0;
@@ -109,9 +151,9 @@ form .names
     color: orangered;
     font-size: large;
 
-} 
-.form-title form .names .user-boxd input
-{
+}
+
+.form-title form .names .user-boxd input {
     width: 225px;
     height: 15px;
     padding: 8px 0;
@@ -122,13 +164,13 @@ form .names
     color: orangered;
     font-size: large;
 
-} 
-form  .user-input input[type= submit]
-{
+}
+
+form .user-input input[type=submit] {
     position: relative;
     margin-top: 10px;
     cursor: pointer;
-    transition:.5s ease all;
+    transition: .5s ease all;
     width: 25%;
     padding: 3px;
     font-size: x-large;
@@ -137,8 +179,11 @@ form  .user-input input[type= submit]
     box-shadow: 0 5px #666;
     transform: translateY(2px);
 
-} 
-form  .user-input input[type= submit]:hover
-{
+}
+
+form .user-input input[type=submit]:hover {
     background-color: rgb(55, 209, 209);
 }
+
+
+/* FIN STYLE FORMULAIRE  */
