--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
     /* margin-top: 40px; */
 }
 
+
 /* Style pour l'entête de la page   */
 .contenair {
     background-color: black;
@@ -32,6 +33,9 @@ header {
 
 }
 
+.msg h1 {
+    color: orangered;
+}
 
 .logo p {
     display: inline-block;
@@ -46,13 +50,38 @@ header {
     vertical-align: middle;
 }
 
+.nav_barre ul {
+    list-style: none;
+    text-decoration: none;
+}
+
+.nav_barre {
+    position: relative;
+    text-align: right;
+    float: right;
+    right: 20px;
+    padding: 50px;
+}
+
+.nav_barre ul li {
+    position: relative;
+    display: inline;
+    margin: 20px;
+    font-size: x-large;
+}
+
+.nav_barre ul li a:hover {
+    color: #0072ff;
+}
+
 /* Fin Style Etête de pâge  */
 
 /* STYLE POUR LA FORMULAIRE  */
-.contour{
+.contour {
     position: relative;
-    
+
 }
+
 .form-title {
     display: flex;
     justify-content: center;
@@ -64,7 +93,7 @@ header {
     left: 20%;
     transform: translate(-59% -50%);
     text-align: center;
-    
+
     border-radius: 15px 15px 0 0;
     background-color: rgb(0, 0, 0, 0, 5);
     box-shadow: 3px -8;
@@ -81,7 +110,7 @@ header {
     border-radius: 15px 15px 0 0;
 }
 
-.form-title .names  input {
+.form-title .names input {
     width: 80%;
     padding: 8px 0;
     font-size: 20px;
@@ -106,6 +135,7 @@ header {
     pointer-events: none;
     transition: .5s;
 }
+
 .nav_barre ul {
     list-style: none;
 }
@@ -133,14 +163,7 @@ header {
 
 
 /* BARRE DE NAVIGATION  */
-/* .nav_barre {
-    position: absolute;
-    width: 40%;
-    text-align: right;
-    float: right;
-    right: 20px;
-    padding: 50px;
-} */
+
 
 
 
@@ -159,3 +182,119 @@ footer {
 .logo-odk img {
     width: 125px;
 }
+
+/* STYLE POUR LES RESEAU SOCIAUX  */
+.contactez-nous #apple,
+#twitter,
+#facebook,
+#github {
+    font-size: 3em;
+    background-color: #00000080;
+    color: #fff;
+    box-shadow: 2px 2px 2px #00000080, 10px 1px 12px #00000080, 2px 2px 10px #00000080, 2px 2px 3px #00000080, inset 2px 2px 10px #00000080 inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080;
+    border-radius: 11px 19px;
+    margin: 0 40px;
+    animation: animate 3s linear infinite;
+    text-shadow: 0 0 50px #0072ff, 0 0 100px #0072ff, 0 0 150px #0072ff, 0 0 200px #0072ff;
+}
+
+/* APPORTER DE L'ANIMATION  */
+#twitter {
+    animation-delay: 0.3s;
+}
+
+#facebook {
+    animation-delay: 0.7s;
+}
+
+#github {
+    animation-delay: 0.1s;
+}
+#apple {
+    animation-delay: 1ms;
+}
+
+@keyframes animate {
+    from {
+        filter: hue-rotate(360deg);
+    }
+}
+
+/* FIN STYLE OUR LES RESAUX SOCIAUX  */
+
+/* STYLE DU SLIDER SUR LA PAGE D'ACCUEIL */
+div#slider {
+    overflow: hidden;
+}
+
+div#slider figure img {
+    width: 4%;
+    float: left;
+    width: 100%;
+    flex-shrink: 0;
+}
+
+div#slider figure {
+    display: flex;
+    flex-direction: flex-start ;
+    width: 40%;
+    margin: 0;
+    left: 0;
+    text-align: left;
+    font-size: 0;
+    animation: 10s slidy infinite;
+}
+
+@keyframes slidy {
+    0% {
+        left: 0%;
+    }
+
+    20% {
+        left: 0%;
+    }
+
+    25% {
+        left: -100%;
+    }
+
+    45% {
+        left: -100%;
+    }
+
+    50% {
+        left: -200%;
+    }
+
+    70% {
+        left: -200%;
+    }
+
+    75% {
+        left: -300%;
+    }
+
+    95% {
+        left: -300%;
+    }
+
+    100% {
+        left: -400%;
+    }
+}
+.accueil .img img
+{
+    width: 10px;
+
+}
+/* .accueil 
+{
+    overflow: hidden;
+}
+.img .slider 
+{
+    float: left;
+    width: 50%;
+    box-sizing: border-box;
+} */
+/* FIN STYLE DU SLIDER SUR LA PAGE ACCEUIL  */
