--- a/css/form.css
+++ b/css/form.css
@@ -4,6 +4,7 @@
     background-image: url('../media/fond.jpeg');
     background-size: cover;
 } */
+/* Style pour l'entête de la page   */
 .contenair {
     background-color: black;
 }
@@ -19,6 +20,9 @@ header {
 
 }
 
+.msg h1 {
+    color: orangered;
+}
 
 .logo p {
     display: inline-block;
@@ -35,6 +39,15 @@ header {
 
 .nav_barre ul {
     list-style: none;
+    text-decoration: none;
+}
+
+.nav_barre {
+    position: relative;
+    text-align: right;
+    float: right;
+    right: 20px;
+    padding: 50px;
 }
 
 .nav_barre ul li {
@@ -44,57 +57,15 @@ header {
     font-size: x-large;
 }
 
+.nav_barre ul li a:hover {
+    color: #0072ff;
+}
+
 /* Fin Style Etête de pâge  */
-/* PIED DE PAGE */
-footer {
-    padding: 20px;
-    margin-top: 100px;
-    background-color: black;
-    color: orangered;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
 
-}
 
-/* STYLE POUR LES RESEAU SOCIAUX  */
-.contactez-nous #apple,
-#twitter,
-#facebook,
-#github {
-    font-size: 3em;
-    background-color: #00000080;
-    color: #fff;
-    box-shadow: 2px 2px 2px #00000080, 10px 1px 12px #00000080, 2px 2px 10px #00000080, 2px 2px 3px #00000080, inset 2px 2px 10px #00000080 inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080;
-    border-radius: 11px 19px;
-    margin: 0 40px;
-    animation: animate 3s linear infinite;
-    text-shadow: 0 0 50px #0072ff, 0 0 100px #0072ff, 0 0 150px #0072ff, 0 0 200px #0072ff;
-}
+/* Fin Style Etête de pâge  */
 
-/* APPORTER DE L'ANIMATION  */
-#twitter {
-    animation-delay: 0.3s;
-}
-
-#facebook {
-    animation-delay: 0.7s;
-}
-
-#github {
-    animation-delay: 0.1s;
-}
-
-@keyframes animate {
-    from {
-        filter: hue-rotate(360deg);
-    }
-}
-
-/* FIN STYLE OUR LES RESAUX SOCIAUX  */
-/* FIN PIED DE PAGE  */
-
-/* FORMULAIRE STYLE  */
 .logo-odk img {
     width: 125px;
 }
@@ -104,7 +75,7 @@ footer {
 }
 
 .form-title {
-    max-width: 500px;
+    max-width: 800px;
     position: relative;
     display: flex;
     flex-wrap: wrap;
@@ -187,3 +158,153 @@ form .user-input input[type=submit]:hover {
 
 
 /* FIN STYLE FORMULAIRE  */
+
+/* STYLE PAGE DETAILS DE L'APPRENANT  */
+section
+{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    /* border: 2px solid black; */
+    border-radius: 10px;
+    max-width: 66%;
+    height: 420px;
+    background-color: rgba(0, 0, 0,  0.4);
+    padding: 10px;
+    left: 100px;
+}
+.detail
+{
+    display: flex;
+}
+.detail-input
+{
+    flex: 1;
+    padding: 0 150px 10px 30px;
+}
+.detail-input .info
+{
+    font-size: 20px;
+    color: #ffffff;;
+}
+.detail-input span
+{
+    color: black;
+}
+section p 
+{
+    font-size: xx-large;
+    margin: auto;
+    background: black;
+    color: orangered;
+    text-align: center;
+    border-radius: 5px;
+    width: 100%;
+    padding: 15px;
+}
+.image-profile
+{
+    flex: 1;
+    margin: 60px 20p5x
+}
+
+.image-profile img
+{
+    width: 35vw;
+    animation: Bounce 4s ease forwards infinite;
+    width: 150px;
+    border-radius: 20px;
+}
+    @keyframes Bounce
+    {
+        0%{
+            transform: translateY(-15px);
+        }
+        50%{
+            transform: translateY(0px); 
+        }
+        100%{
+            transform: translateY(-15px) ;
+        }
+    }
+    .shadow 
+    {
+        background: black;
+        height: 15px;
+        filter: blur(5px);
+        box-shadow:-10px 30px 18px 1px rgba(0, 0, 0, 1);
+        width: 17vw;
+        animation: BounceIn ease 4s forwards infinite;
+
+    }
+    @keyframes BounceIn 
+    {
+        0%{
+            transform: translateY(-24px) scale(.5);
+        }
+        50% {
+            transform: translateY(0px) scale(.7);
+
+        }
+        100%{
+            transform: translate(-24px) scale(.5);
+        }
+    }
+
+/* PIED DE PAGE */
+footer {
+    padding: 20px;
+    margin-top: 100px;
+    background-color: black;
+    color: orangered;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+
+.logo-odk img {
+    width: 125px;
+}
+
+/* STYLE POUR LES RESEAU SOCIAUX  */
+.contactez-nous #apple,
+#twitter,
+#facebook,
+#github {
+    font-size: 3em;
+    background-color: #00000080;
+    color: #fff;
+    box-shadow: 2px 2px 2px #00000080, 10px 1px 12px #00000080, 2px 2px 10px #00000080, 2px 2px 3px #00000080, inset 2px 2px 10px #00000080 inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080;
+    border-radius: 11px 19px;
+    margin: 0 40px;
+    animation: animate 3s linear infinite;
+    text-shadow: 0 0 50px #0072ff, 0 0 100px #0072ff, 0 0 150px #0072ff, 0 0 200px #0072ff;
+}
+
+/* APPORTER DE L'ANIMATION  */
+#twitter {
+    animation-delay: 0.3s;
+}
+
+#facebook {
+    animation-delay: 0.7s;
+}
+
+#github {
+    animation-delay: 0.1s;
+}
+#apple {
+    animation-delay: 1ms;
+}
+
+@keyframes animate {
+    from {
+        filter: hue-rotate(360deg);
+    }
+}
+
+/* FIN STYLE OUR LES RESAUX SOCIAUX  */
+/* FIN PIED DE PAGE  */
