--- a/css/style.css
+++ b/css/style.css
@@ -76,90 +76,6 @@ header {
 
 /* Fin Style Etête de pâge  */
 
-/* STYLE POUR LA FORMULAIRE  */
-.contour {
-    position: relative;
-
-}
-
-.form-title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    padding: 15px;
-    width: 800px;
-    top: 50%;
-    left: 20%;
-    transform: translate(-59% -50%);
-    text-align: center;
-
-    border-radius: 15px 15px 0 0;
-    background-color: rgb(0, 0, 0, 0, 5);
-    box-shadow: 3px -8;
-    font-size: xx-large;
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px;
-    padding-left: 100px;
-
-
-}
-
-.form-title p {
-    background-color: rgb(235, 29, 29);
-    border-radius: 15px 15px 0 0;
-}
-
-.form-title .names input {
-    width: 80%;
-    padding: 8px 0;
-    font-size: 20px;
-    color: #0b7dff;
-    margin-bottom: 30px;
-    /* border: none; */
-    border-bottom: 1px solid #c91e1e;
-    border-radius: 5px;
-    outline: none;
-    background: transparent;
-
-
-
-}
-
-.form-title .names .user-box label {
-    position: relative;
-    top: 0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 20px;
-    pointer-events: none;
-    transition: .5s;
-}
-
-.nav_barre ul {
-    list-style: none;
-}
-
-.nav_barre ul li {
-    position: relative;
-    display: inline;
-    margin: 20px;
-    font-size: x-large;
-}
-
-
-/* .form
-{
-   position: relative;
-   width: 500px;
-   top: 50%;
-   left: 10%;
-   margin-top: 20px;
-}
- */
-
-
-/*FIM STYLE POUR LA FORMULAIRE  */
 
 
 /* BARRE DE NAVIGATION  */
@@ -189,9 +105,9 @@ footer {
 #facebook,
 #github {
     font-size: 3em;
-    background-color: #00000080;
+    background-color: #b9b6b6fb;
     color: #fff;
-    box-shadow: 2px 2px 2px #00000080, 10px 1px 12px #00000080, 2px 2px 10px #00000080, 2px 2px 3px #00000080, inset 2px 2px 10px #00000080 inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080;
+    box-shadow: 2px 2px 2px #cfc0c0, 10px 1px 12px #00000080, 2px 2px 10px #00000080, 2px 2px 3px #00000080, inset 2px 2px 10px #00000080 inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080;
     border-radius: 11px 19px;
     margin: 0 40px;
     animation: animate 3s linear infinite;
@@ -284,7 +200,7 @@ div#slider figure {
 }
 .accueil .img img
 {
-    width: 10px;
+    width: 50%;
 
 }
 /* .accueil 
