--- a/css/style.css
+++ b/css/style.css
@@ -105,9 +105,9 @@ footer {
 #facebook,
 #github {
     font-size: 3em;
-    background-color: #b9b6b6fb;
+    background-color: #00000080;
     color: #fff;
-    box-shadow: 2px 2px 2px #cfc0c0, 10px 1px 12px #00000080, 2px 2px 10px #00000080, 2px 2px 3px #00000080, inset 2px 2px 10px #00000080 inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080;
+    box-shadow: 2px 2px 2px #00000080, 10px 1px 12px #00000080, 2px 2px 10px #00000080, 2px 2px 3px #00000080, inset 2px 2px 10px #00000080 inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080;
     border-radius: 11px 19px;
     margin: 0 40px;
     animation: animate 3s linear infinite;
